# LGF_NSE

./: .gitignore  .gitmodules  CMakeLists.txt
Exec/NSE_test/: inputs
Exec/NSE_test/Logs/FMM/: log256.txt  log512.txt
Exec/NSE_test/Results/FMM256/: movie.visit
Exec/NSE_test/Results/FMM512/: Backtrace.0
Src/NSE_core/: CMakeLists.txt  FlowField.H  ProjectionWorkspace.H  RKCoefficients.H  SpatialDiscretization.H  flowField.cpp  projectionWorkspace.cpp
Src/NSE_run/: CMakeLists.txt  IOManager.H  MyFunctions.H  SimConfig.H  initializeFlow.cpp  ioManager.cpp  main.cpp
Src/NSE_run/Utils/: inputs  postProcessKE.py
Src/NSE_test/: CMakeLists.txt  MyFunctions.H  initializeFlow.cpp  main.cpp
Src/NSE_test/Utils/: inputs  postProcess.py
